--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <artifactId>guava</artifactId>
       <version>23.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.flume/flume-ng-core -->
+    <dependency>
+      <groupId>org.apache.flume</groupId>
+      <artifactId>flume-ng-core</artifactId>
+      <version>1.6.0</version>
+    </dependency>
 
   </dependencies>
 
